Week 1 Programming first task

--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,13 @@
         <div style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="display: flex; align-items: center;">
-                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; 
+                    height: 2.5cm; margin-right: 1%;">
                     <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
                 </div>
                 <div style="display: flex; align-items: center;">
-                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
+                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; 
+                    width: 300px;">
                     <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
                     <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
                         <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
@@ -33,11 +35,16 @@
         <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
             <summary style="cursor: pointer;"><u>Collection</u></summary>
             <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
-                <li><a href="index.html#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">Boy Dress</a></li>
-                <li><a href="index.html#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">Girl Dress</a></li>
-                <li><a href="index.html#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">New Arrival</a></li>
-                <li><a href="index.html#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">Best Seller</a></li>
-                <li><a href="index.html#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
+                <li><a href="index.html#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Boy Dress</a></li>
+                <li><a href="index.html#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Girl Dress</a></li>
+                <li><a href="index.html#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    New Arrival</a></li>
+                <li><a href="index.html#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Best Seller</a></li>
+                <li><a href="index.html#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Toy</a></li>
             </ul>
         </details>
         &nbsp; | &nbsp;
@@ -50,7 +57,8 @@
             <h2>Contact Us</h2>
             
             <!-- Welcome Message -->
-            <p>Welcome to the Contact Us page! We are here to assist you with any questions or concerns you might have. Please reach out to us through any of the methods listed below, and we will get back to you as soon as possible.</p>
+            <p>Welcome to the Contact Us page! We are here to assist you with any questions or concerns you might have. 
+                Please reach out to us through any of the methods listed below, and we will get back to you as soon as possible.</p>
             
             <h3>Contact Form</h3>
             <p>If you have any inquiries, please fill out the form below and we will get back to you within 24 hours.</p>
@@ -109,7 +117,8 @@
                 <tr>
                     <td><strong>Follow Us:</strong></td>
                     <td>
-                        <a href="https://www.facebook.com/profile.php?id=61560090484375&mibextid=LQQJ4d" target="_blank">Facebook</a> | 
+                        <a href="https://www.facebook.com/profile.php?id=61560090484375&mibextid=LQQJ4d" target="_blank">
+                            Facebook</a> | 
                         <a href="https://www.instagram.com/ssbnos" target="_blank">Instagram</a> | 
                         <a href="https://twitter.com/ssbnos" target="_blank">Twitter</a>
                     </td>
