--- a/faqs.html
+++ b/faqs.html
@@ -33,11 +33,16 @@
         <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
             <summary style="cursor: pointer;"><u>Collection</u></summary>
             <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
-                <li><a href="index.html#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">Boy Dress</a></li>
-                <li><a href="index.html#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">Girl Dress</a></li>
-                <li><a href="index.html#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">New Arrival</a></li>
-                <li><a href="index.html#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">Best Seller</a></li>
-                <li><a href="index.html#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
+                <li><a href="index.html#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Boy Dress</a></li>
+                <li><a href="index.html#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Girl Dress</a></li>
+                <li><a href="index.html#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    New Arrival</a></li>
+                <li><a href="index.html#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Best Seller</a></li>
+                <li><a href="index.html#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Toy</a></li>
             </ul>
         </details>
         &nbsp; | &nbsp;
@@ -68,7 +73,8 @@
                     <td>
                         <details>
                             <summary><strong>How can I track my order?</strong></summary>
-                            <p>Once your order is shipped, you will receive a tracking number via email to check the status of your delivery.</p>
+                            <p>Once your order is shipped, you will receive a tracking number via email to check 
+                                the status of your delivery.</p>
                         </details>
                     </td>
                 </tr>
@@ -81,7 +87,8 @@
                     <td>
                         <details>
                             <summary><strong>What is your return policy?</strong></summary>
-                            <p>You can return products within 30 days of receiving them. Please ensure the items are in their original condition.</p>
+                            <p>You can return products within 30 days of receiving them. 
+                                Please ensure the items are in their original condition.</p>
                         </details>
                     </td>
                 </tr>
@@ -94,7 +101,8 @@
                     <td>
                         <details>
                             <summary><strong>Do you offer international shipping?</strong></summary>
-                            <p>Currently, we only offer shipping within Nepal. International shipping is not available at this time.</p>
+                            <p>Currently, we only offer shipping within Nepal. 
+                                International shipping is not available at this time.</p>
                         </details>
                     </td>
                 </tr>
@@ -107,7 +115,8 @@
                     <td>
                         <details>
                             <summary><strong>How can I contact customer support?</strong></summary>
-                            <p>You can reach our customer support team through the <a href="contact.html">Contact Us</a> page on our website.</p>
+                            <p>You can reach our customer support team through the <a href="contact.html">
+                                Contact Us</a> page on our website.</p>
                         </details>
                     </td>
                 </tr>
@@ -120,7 +129,8 @@
                     <td>
                         <details>
                             <summary><strong>What should I do if I receive a damaged product?</strong></summary>
-                            <p>If you receive a damaged product, please contact us immediately through the <a href="contact.html">Contact Us</a> page with your order details and photos of the damage.</p>
+                            <p>If you receive a damaged product, please contact us immediately through the <a href="contact.html">
+                                Contact Us</a> page with your order details and photos of the damage.</p>
                         </details>
                     </td>
                 </tr>
@@ -133,7 +143,8 @@
                     <td>
                         <details>
                             <summary><strong>Can I change or cancel my order after placing it?</strong></summary>
-                            <p>Order changes or cancellations can be made within 1 hour of placing the order. Please contact our customer support team as soon as possible.</p>
+                            <p>Order changes or cancellations can be made within 1 hour of placing the order. 
+                                Please contact our customer support team as soon as possible.</p>
                         </details>
                     </td>
                 </tr>
@@ -146,7 +157,8 @@
                     <td>
                         <details>
                             <summary><strong>Do you have a physical store?</strong></summary>
-                            <p>Yes, our physical store is located at Basundhara, Kathmandu. You can visit us during our opening hours: 7AM - 7PM.</p>
+                            <p>Yes, our physical store is located at Basundhara, Kathmandu. 
+                                You can visit us during our opening hours: 7AM - 7PM.</p>
                         </details>
                     </td>
                 </tr>
