--- a/product2.html
+++ b/product2.html
@@ -8,45 +8,72 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
 </head>
 <body>
-    <header style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-            <div style="display: flex; align-items: center;">
-                <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
-                <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
-            </div>
-            <div style="display: flex; align-items: center;">
-                <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
-                <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
-                <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
-                    <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
-                    <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
-                </nav>
+    <header>
+        <div style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <div style="display: flex; align-items: center;">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
+                    <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
+                </div>
+                <div style="display: flex; align-items: center;">
+                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
+                    <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
+                    <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
+                        <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
+                        <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
 
     <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="index.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
-        <a href="index.html#products" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Products</a> &nbsp; | &nbsp;
-        <a href="index.html#location" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Location</a> &nbsp; | &nbsp;
-        <a href="index.html#contact" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact</a>
+        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
+
+        <!-- Collection Dropdown -->
+        <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
+            <summary style="cursor: pointer;"><u>Collection</u></summary>
+            <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
+                <li><a href="#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Boy Dress</a></li>
+                <li><a href="#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Girl Dress</a></li>
+                <li><a href="#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    New Arrival</a></li>
+                <li><a href="#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Best Seller</a></li>
+                <li><a href="#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
+            </ul>
+        </details>
+
+        &nbsp; | &nbsp;
+        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">FAQs</a> &nbsp; | &nbsp;
+        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact Us</a>
     </nav>
 
     <main style="padding: 10px; background-color: #c1c5c6;">
         <section id="product2">
-            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</h2>
+            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress 
+                Kids Waistcoat Pants Bowtie Clothes Set</h2>
             <img src="Pictures/Boy Dress.jpg" alt="Boy Dress" style="width: 300px; height: 300px; margin-right: 20px;">
             <p>Price: Rs. 350</p>
             <button>Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
-            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. It's ideal for various occasions, including performances, weddings, and casual wear. The set includes a vest, shorts, waistcoat, pants, and a bowtie, ensuring your child looks smart and fashionable.</p>
+            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. 
+                It's ideal for various occasions, including performances, weddings, and casual wear. 
+                The set includes a vest, shorts, waistcoat, pants, and a bowtie, ensuring your child looks smart and fashionable.</p>
             <ul>
-                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. The floral pattern and short-sleeved shirt design are ideal for various occasions.</li>
-                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester and cotton blend fabric, ensuring durability and comfort.</li>
-                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, designed with a patterned shirt and shorts for added versatility.</li>
-                <li><u>Customizable and Available in Various Colors:</u> Available in various colors to match your child's personality and style.</li>
-                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, providing the perfect outfit for your child.</li>
+                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. 
+                    The floral pattern and short-sleeved shirt design are ideal for various occasions.</li>
+                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester and cotton blend fabric, 
+                    ensuring durability and comfort.</li>
+                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, 
+                    designed with a patterned shirt and shorts for added versatility.</li>
+                <li><u>Customizable and Available in Various Colors:</u> Available in various colors to match 
+                    your child's personality and style.</li>
+                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, 
+                    providing the perfect outfit for your child.</li>
             </ul>
             <h3>Specifications</h3>
             <table border="1" cellpadding="10" cellspacing="0">
@@ -71,7 +98,9 @@
                     <td>Multiple</td>
                 </tr>
             </table>
+
         </section>
+        
     </main>
 
     <footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
