--- a/product4.html
+++ b/product4.html
@@ -8,28 +8,47 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
 </head>
 <body>
-    <header style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-            <div style="display: flex; align-items: center;">
-                <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
-                <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
-            </div>
-            <div style="display: flex; align-items: center;">
-                <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
-                <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
-                <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
-                    <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
-                    <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
-                </nav>
+    <header>
+        <div style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <div style="display: flex; align-items: center;">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
+                    <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
+                </div>
+                <div style="display: flex; align-items: center;">
+                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
+                    <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
+                    <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
+                        <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
+                        <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
 
     <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="index.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
-        <a href="index.html#products" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Products</a> &nbsp; | &nbsp;
-        <a href="index.html#location" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Location</a> &nbsp; | &nbsp;
-        <a href="index.html#contact" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact</a>
+        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
+
+        <!-- Collection Dropdown -->
+        <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
+            <summary style="cursor: pointer;"><u>Collection</u></summary>
+            <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
+                <li><a href="#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Boy Dress</a></li>
+                <li><a href="#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Girl Dress</a></li>
+                <li><a href="#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    New Arrival</a></li>
+                <li><a href="#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
+                    Best Seller</a></li>
+                <li><a href="#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
+            </ul>
+        </details>
+
+        &nbsp; | &nbsp;
+        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">FAQs</a> &nbsp; | &nbsp;
+        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact Us</a>
     </nav>
 
     <main style="padding: 10px; background-color: #c1c5c6;">
@@ -40,12 +59,17 @@
             <button>Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
-            <p>This girls' leggings are made of high-quality fabric, ensuring comfort and durability. The bright and vivid colors, along with the stretchy and breathable material, make these leggings perfect for any occasion.</p>
+            <p>This girls' leggings are made of high-quality fabric, ensuring comfort and durability. 
+                The bright and vivid colors, along with the stretchy and breathable material, 
+                make these leggings perfect for any occasion.</p>
             <ul>
-                <li><u>QUALITY FABRIC:</u> 95% Polyester, 5% Spandex. The fabric is stretchy, super soft, and breathable.</li>
+                <li><u>QUALITY FABRIC:</u> 95% Polyester, 5% Spandex. 
+                    The fabric is stretchy, super soft, and breathable.</li>
                 <li><u>Slaixiu 4-Pack Printing leggings for girls:</u> Colors are bright and vivid, even after washing.</li>
-                <li><u>Life scene suitable for girls leggings:</u> Great for playing, exercising, daily wear, dance, yoga, and more.</li>
-                <li><u>RECOMMENDED SIZE:</u> Available in ages 4-12, with sizes 4-5T, 6-7 Years, 8-9 Years, 10-11 Years, and 12-13 Years.</li>
+                <li><u>Life scene suitable for girls leggings:</u> Great for playing, exercising, 
+                    daily wear, dance, yoga, and more.</li>
+                <li><u>RECOMMENDED SIZE:</u> Available in ages 4-12, with sizes 4-5T, 
+                    6-7 Years, 8-9 Years, 10-11 Years, and 12-13 Years.</li>
                 <li><u>100% SATISFACTION GUARANTEE:</u> Purchase and quality covered, with a full refund option.</li>
             </ul>
             <h3>Specifications</h3>
