--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sana Sana Babu Nani Online Store</title>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
-    <!-- Link to the CSS file -->
+    <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
 </head>
 <body>
@@ -30,31 +30,23 @@
     </header>
 
     <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
 
         <!-- Collection Dropdown -->
-        <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
-            <summary style="cursor: pointer;"><u>Collection</u></summary>
-            <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
-                <li><a href="#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Boy Dress</a></li>
-                    <hr>
-                <li><a href="#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Girl Dress</a></li>
-                    <hr>
-                <li><a href="#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    New Arrival</a></li>
-                    <hr>
-                <li><a href="#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Best Seller</a></li>
-                    <hr>
-                <li><a href="#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
-            </ul>
-        </details>
+        <div class="dropdown">
+            <button class="dropbtn">Collection</button>
+            <div class="dropdown-content">
+                <a href="#boy-dress">Boy Dress</a>
+                <a href="#girl-dress">Girl Dress</a>
+                <a href="#new-arrival">New Arrival</a>
+                <a href="#best-seller">Best Seller</a>
+                <a href="#toy">Toy</a>
+            </div>
+        </div>
 
         &nbsp; | &nbsp;
-        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);"><u>FAQs</u></a> &nbsp; | &nbsp;
-        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);"><u>Contact Us</u></a>
+        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">FAQs</a> &nbsp; | &nbsp;
+        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact Us</a>
     </nav>
 
     <main style="padding: 10px; background-color: #c1c5c6;">
@@ -133,40 +125,4 @@
 
 
 <div style="text-align: center; margin-top: 20px;">
-    <a href="products-page2.html" style="padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none;">
-        See More
-    </a>
-</div>
-</section>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-</main>
-
-<footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
-<p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
-</footer>
-
-<!-- Ad Section -->
-<div id="ad-popup" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-background-color: rgba(0, 0, 0, 0.8); color: #fff; text-align: center; display: none;">
-<div style="margin: 3% auto; background-color: #e8e5e5; color: #000; padding: 10px; 
-width: 60%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);">
-<h2>Special Offer!</h2>
-<p>Get 10% off on your first purchase. Order Now!</p>
-<img src="Pictures/ads.png" alt="Special Offer" style="width: 70%; height: 400px;">
-<br><br>
-<button id="close-ad-btn" style="padding: 10px 20px; background-color: #007bff; color: #fff; border: none; cursor: pointer;">
-    Close
-</button>
-</div>
-</div>
-
-<!-- Include the ads.js script -->
-<script src="ads.js"></script>
-</body>
-</html>
+    <a href="products-page2.html" style="padding: 10px 20
