--- a/index.html
+++ b/index.html
@@ -125,4 +125,18 @@
 
 
 <div style="text-align: center; margin-top: 20px;">
-    <a href="products-page2.html" style="padding: 10px 20
+    <a href="products-page2.html" style="padding: 10px 20px; background-color: #000; color: #fff; text-decoration: none;">Next Page</a>
+</div>
+
+</div>
+
+</section>
+</main>
+
+    <footer style="background-color: rgb(0, 0, 0); color: white; text-align: center; padding: 10px;">
+        <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
+    </footer>
+
+    <script src="popup.js"></script>
+</body>
+</html>
