--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Collection Dropdown -->
         <div class="dropdown">
-            <button class="dropbtn">Collection</button>
+            <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
                 <a href="#boy-dress">Boy Dress</a>
                 <a href="#girl-dress">Girl Dress</a>
