--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
 
 
 <div style="text-align: center; margin-top: 20px;">
-    <a href="products-page2.html" style="padding: 10px 20px; background-color: #000; color: #fff; text-decoration: none;">Next Page</a>
+    <a href="products-page2.html" style="padding: 10px 20px; background-color: #000; color: #fff; text-decoration: none;">See More</a>
+
+    <br>
+    <br>
+    <br>
+    <br>
 </div>
 
 </div>
