--- a/carts.html
+++ b/carts.html
@@ -8,6 +8,8 @@
 
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <!-- External CSS -->
+    <link rel="stylesheet" href="collection.css">
 </head>
 
 <body>
