--- a/faqs.html
+++ b/faqs.html
@@ -6,6 +6,8 @@
     <title>FAQs - Sana Sana Babu Nani Online Store</title>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <!-- External CSS -->
+    <link rel="stylesheet" href="collection.css">
 </head>
 <body>
     <header>
