--- a/index.html
+++ b/index.html
@@ -124,13 +124,20 @@
         </div>
 
 
-<div style="text-align: center; margin-top: 20px;">
-    <a href="products-page2.html" style="padding: 10px 20px; background-color: #000; color: #fff; text-decoration: none;">See More</a>
+        <div style="text-align: center; margin-top: 20px;">
+                
+            <a href="products-page2.html" style="padding: 10px 20px; background-color: #007bff; color: #fff; 
+            text-decoration: none;">See More</a>
+        </div>
+    </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 </div>
 
 </div>
