--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
-    <script src="popup.js"></script>
+    <script src="ads.js"></script>
 </body>
 </html>
