--- a/product1.html
+++ b/product1.html
@@ -30,7 +30,7 @@
     </header>
 
     <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
+        <a href="index.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
 
         <!-- Collection Dropdown -->
         <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
