--- a/carts.html
+++ b/carts.html
@@ -10,29 +10,51 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="carts.css"> <!-- Add specific styles for the cart page -->
 </head>
 
 <body>
-
-    <header style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-            <div style="display: flex; align-items: center;">
-                <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
-                <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
-            </div>
-
-            <div style="display: flex; align-items: center;">
-                <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
-                <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
-                <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
-                    <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
-                    <a href="#mycart" style="color: rgb(255, 245, 245);">My Carts</a>
-                </nav>
+    <header>
+        <div class="header-container">
+            <div class="header-flex">
+                <div class="logo-title">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
+                    <h1>Sana Sana Babu Nani Online Store</h1>
+                </div>
+                <div class="search-login">
+                    <input type="text" id="search" name="search" placeholder="Search for products...">
+                    <button type="submit">Search</button>
+                    <nav>
+                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="carts.html">My Carts</a> <!-- Added 'active' class -->
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
 
-    <main style="padding: 150px; background-color: #c1c5c6; text-align: center;">
+    <nav class="main-nav">
+        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+
+        <!-- Collection Dropdown -->
+        <div class="dropdown">
+            <button class="dropbtn"><u>Collection</u></button>
+            <div class="dropdown-content">
+                <a href="#boy-dress">Boy Dress</a>
+                <a href="#girl-dress">Girl Dress</a>
+                <a href="#new-arrival">New Arrival</a>
+                <a href="#best-seller">Best Seller</a>
+                <a href="#toy">Toy</a>
+            </div>
+        </div>
+
+        &nbsp; | &nbsp;
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        <a href="contact.html"><u>Contact Us</u></a>
+    </nav>
+
+    <main class="main-content">
         <h2>Your Shopping Cart</h2>
 
         <!-- Check if user is logged in -->
@@ -41,7 +63,7 @@
         </div>
     </main>
 
-    <footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
+    <footer>
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
