--- a/faqs.html
+++ b/faqs.html
@@ -10,6 +10,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="faqs.css"> <!-- Add specific styles for the FAQ page -->
 </head>
 
 <body>
@@ -55,7 +56,7 @@
             <h2>Frequently Asked Questions (FAQs)</h2>
 
             <!-- FAQ Table 1 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
@@ -68,13 +69,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 2 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>How can I track my order?</strong></summary>
-                            <p>Once your order is shipped, you will receive a tracking number via email to check 
-                                the status of your delivery.</p>
+                            <p>Once your order is shipped, you will receive a tracking number via email to check the status of your delivery.</p>
                         </details>
                     </td>
                 </tr>
@@ -82,13 +82,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 3 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>What is your return policy?</strong></summary>
-                            <p>You can return products within 30 days of receiving them. 
-                                Please ensure the items are in their original condition.</p>
+                            <p>You can return products within 30 days of receiving them. Please ensure the items are in their original condition.</p>
                         </details>
                     </td>
                 </tr>
@@ -96,13 +95,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 4 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>Do you offer international shipping?</strong></summary>
-                            <p>Currently, we only offer shipping within Nepal. 
-                                International shipping is not available at this time.</p>
+                            <p>Currently, we only offer shipping within Nepal. International shipping is not available at this time.</p>
                         </details>
                     </td>
                 </tr>
@@ -110,13 +108,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 5 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>How can I contact customer support?</strong></summary>
-                            <p>You can reach our customer support team through the <a href="contact.html">
-                                Contact Us</a> page on our website.</p>
+                            <p>You can reach our customer support team through the <a href="contact.html">Contact Us</a> page on our website.</p>
                         </details>
                     </td>
                 </tr>
@@ -124,13 +121,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 6 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>What should I do if I receive a damaged product?</strong></summary>
-                            <p>If you receive a damaged product, please contact us immediately through the <a href="contact.html">
-                                Contact Us</a> page with your order details and photos of the damage.</p>
+                            <p>If you receive a damaged product, please contact us immediately through the <a href="contact.html">Contact Us</a> page with your order details and photos of the damage.</p>
                         </details>
                     </td>
                 </tr>
@@ -138,13 +134,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 7 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>Can I change or cancel my order after placing it?</strong></summary>
-                            <p>Order changes or cancellations can be made within 1 hour of placing the order. 
-                                Please contact our customer support team as soon as possible.</p>
+                            <p>Order changes or cancellations can be made within 1 hour of placing the order. Please contact our customer support team as soon as possible.</p>
                         </details>
                     </td>
                 </tr>
@@ -152,13 +147,12 @@
             <br> <!-- Break between FAQs -->
 
             <!-- FAQ Table 8 -->
-            <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+            <table class="faq-table">
                 <tr>
                     <td>
                         <details>
                             <summary><strong>Do you have a physical store?</strong></summary>
-                            <p>Yes, our physical store is located at Basundhara, Kathmandu. 
-                                You can visit us during our opening hours: 7AM - 7PM.</p>
+                            <p>Yes, our physical store is located at Basundhara, Kathmandu. You can visit us during our opening hours: 7AM - 7PM.</p>
                         </details>
                     </td>
                 </tr>
@@ -174,4 +168,3 @@
 </body>
 
 </html>
-
