--- a/contact.html
+++ b/contact.html
@@ -8,53 +8,48 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css"> <!-- Add specific styles for the contact page -->
 </head>
 <body>
-    <header>
-        <div style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <div style="display: flex; align-items: center;">
-                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; 
-                    height: 2.5cm; margin-right: 1%;">
-                    <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
-                </div>
-                <div style="display: flex; align-items: center;">
-                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; 
-                    width: 300px;">
-                    <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
-                    <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
-                        <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
-                        <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
-                    </nav>
-                </div>
+    <header class="header-container">
+        <div class="header-flex">
+            <div class="logo-title">
+                <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
+                <h1>Sana Sana Babu Nani Online Store</h1>
+            </div>
+            <div class="search-login">
+                <input type="text" id="search" name="search" placeholder="Search for products..." class="search-box">
+                <button type="submit" class="search-button">Search</button>
+                <nav class="nav-links">
+                    <a href="login.html">Login</a> &nbsp; | &nbsp;
+                    <a href="carts.html">My Carts</a>
+                </nav>
             </div>
         </div>
     </header>
 
-    <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="index.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
+    <nav class="main-nav">
+        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+
         <!-- Collection Dropdown -->
-        <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
-            <summary style="cursor: pointer;"><u>Collection</u></summary>
-            <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
-                <li><a href="index.html#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Boy Dress</a></li>
-                <li><a href="index.html#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Girl Dress</a></li>
-                <li><a href="index.html#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    New Arrival</a></li>
-                <li><a href="index.html#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Best Seller</a></li>
-                <li><a href="index.html#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Toy</a></li>
-            </ul>
-        </details>
+        <div class="dropdown">
+            <button class="dropbtn"><u>Collection</u></button>
+            <div class="dropdown-content">
+                <a href="#boy-dress">Boy Dress</a>
+                <a href="#girl-dress">Girl Dress</a>
+                <a href="#new-arrival">New Arrival</a>
+                <a href="#best-seller">Best Seller</a>
+                <a href="#toy">Toy</a>
+            </div>
+        </div>
+
         &nbsp; | &nbsp;
-        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">FAQs</a> &nbsp; | &nbsp;
-        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact Us</a>
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        <a href="contact.html" class="active"><u>Contact Us</u></a>
     </nav>
 
-    <main style="padding: 10px; background-color: #c1c5c6;">
+    <main>
         <section id="contact">
             <h2>Contact Us</h2>
             
@@ -87,10 +82,9 @@
             <p>Visit us at:</p>
             <p><strong>Basundhara, Kathmandu</strong></p>
             <p>We'd love to see you! Feel free to drop by during our working hours.</p>
-            <a href="https://maps.app.goo.gl/ggCarvpb4oriXfKt7?g_st=ic" target="_blank">View on Google Maps</a>
+            <a href="https://maps.app.goo.gl/ggCarvpb4oriXfKt7?g_st=ic" target="_blank"><img src="Pictures/Location.jpg" alt="Location Map" class="location-map"></a>
             <br><br>
-            <img src="Pictures/Location.jpg" alt="Location Map" style="width: 100%; max-width: 600px; height: auto;">
-            <br><br>
+        
             <p>Opening Hours:</p>
             <ul>
                 <li>Monday - Friday: 7AM - 7PM</li>
@@ -103,7 +97,7 @@
             <!-- Additional Contact Details -->
             <h3>Additional Contact Information</h3>
             <p>If you need immediate assistance, please contact us using the information below:</p>
-            <table border="1" cellpadding="10" cellspacing="0">
+            <table class="contact-info-table">
                 <tr>
                     <td><strong>Phone:</strong></td>
                     <td><a href="tel:+977-123456789">+977-123456789</a></td>
@@ -129,7 +123,7 @@
         </section>
     </main>
 
-    <footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
+    <footer>
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 </body>
