--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p style="font-size: 18px;">Welcome to our online store. Browse our products and enjoy shopping!</p>
+            <p style="font-size: 18px;">Welcome to our online store. 
+                Browse our products and enjoy shopping!</p>
         </section>
 
         <section id="products">
