--- a/products.html
+++ b/products.html
@@ -9,6 +9,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="faqs.css"> <!-- Add specific styles for the FAQ page -->
     <link rel="stylesheet" href="products.css"> <!-- Add products.css -->
 </head>
 <body>
@@ -19,7 +20,8 @@
                 <h1>Sana Sana Babu Nani Online Store</h1>
             </div>
             <div class="search-login">
-                <input type="text" id="search" name="search" placeholder="Search for products..." class="search-box">
+                <input type="text" id="search" name="search" 
+                placeholder="Search for products..." class="search-box">
                 <button type="submit" class="search-button">Search</button>
                 <nav class="nav-links">
                     <a href="login.html">Login</a> &nbsp; | &nbsp;
