--- a/faqs.html
+++ b/faqs.html
@@ -21,7 +21,8 @@
                 <h1>Sana Sana Babu Nani Online Store</h1>
             </div>
             <div class="search-login">
-                <input type="text" id="search" name="search" placeholder="Search for products..." class="search-box">
+                <input type="text" id="search" name="search" 
+                placeholder="Search for products..." class="search-box">
                 <button type="submit" class="search-button">Search</button>
                 <nav class="nav-links">
                     <a href="login.html">Login</a> &nbsp; | &nbsp;
@@ -61,7 +62,8 @@
                     <td>
                         <details>
                             <summary><strong>What payment methods do you accept?</strong></summary>
-                            <p>We accept various payment methods including credit/debit cards, online banking, and mobile wallets.</p>
+                            <p>We accept various payment methods including credit/debit cards, 
+                                online banking, and mobile wallets.</p>
                         </details>
                     </td>
                 </tr>
@@ -74,7 +76,8 @@
                     <td>
                         <details>
                             <summary><strong>How can I track my order?</strong></summary>
-                            <p>Once your order is shipped, you will receive a tracking number via email to check the status of your delivery.</p>
+                            <p>Once your order is shipped, you will receive a 
+                                tracking number via email to check the status of your delivery.</p>
                         </details>
                     </td>
                 </tr>
@@ -87,7 +90,8 @@
                     <td>
                         <details>
                             <summary><strong>What is your return policy?</strong></summary>
-                            <p>You can return products within 30 days of receiving them. Please ensure the items are in their original condition.</p>
+                            <p>You can return products within 30 days of receiving them. 
+                                Please ensure the items are in their original condition.</p>
                         </details>
                     </td>
                 </tr>
@@ -100,7 +104,8 @@
                     <td>
                         <details>
                             <summary><strong>Do you offer international shipping?</strong></summary>
-                            <p>Currently, we only offer shipping within Nepal. International shipping is not available at this time.</p>
+                            <p>Currently, we only offer shipping within Nepal. 
+                                International shipping is not available at this time.</p>
                         </details>
                     </td>
                 </tr>
@@ -113,7 +118,8 @@
                     <td>
                         <details>
                             <summary><strong>How can I contact customer support?</strong></summary>
-                            <p>You can reach our customer support team through the <a href="contact.html">Contact Us</a> page on our website.</p>
+                            <p>You can reach our customer support team through the <a href="contact.html">
+                                Contact Us</a> page on our website.</p>
                         </details>
                     </td>
                 </tr>
@@ -125,8 +131,10 @@
                 <tr>
                     <td>
                         <details>
-                            <summary><strong>What should I do if I receive a damaged product?</strong></summary>
-                            <p>If you receive a damaged product, please contact us immediately through the <a href="contact.html">Contact Us</a> page with your order details and photos of the damage.</p>
+                            <summary><strong>
+                                What should I do if I receive a damaged product?</strong></summary>
+                            <p>If you receive a damaged product, 
+                                please contact us immediately through the <a href="contact.html">Contact Us</a> page with your order details and photos of the damage.</p>
                         </details>
                     </td>
                 </tr>
@@ -138,8 +146,10 @@
                 <tr>
                     <td>
                         <details>
-                            <summary><strong>Can I change or cancel my order after placing it?</strong></summary>
-                            <p>Order changes or cancellations can be made within 1 hour of placing the order. Please contact our customer support team as soon as possible.</p>
+                            <summary><strong>Can I change or 
+                                cancel my order after placing it?</strong></summary>
+                            <p>Order changes or cancellations can be made within 
+                                1 hour of placing the order. Please contact our customer support team as soon as possible.</p>
                         </details>
                     </td>
                 </tr>
@@ -152,7 +162,8 @@
                     <td>
                         <details>
                             <summary><strong>Do you have a physical store?</strong></summary>
-                            <p>Yes, our physical store is located at Basundhara, Kathmandu. You can visit us during our opening hours: 7AM - 7PM.</p>
+                            <p>Yes, our physical store is located at Basundhara, Kathmandu. 
+                                You can visit us during our opening hours: 7AM - 7PM.</p>
                         </details>
                     </td>
                 </tr>
