--- a/faqs.html
+++ b/faqs.html
@@ -134,7 +134,9 @@
                             <summary><strong>
                                 What should I do if I receive a damaged product?</strong></summary>
                             <p>If you receive a damaged product, 
-                                please contact us immediately through the <a href="contact.html">Contact Us</a> page with your order details and photos of the damage.</p>
+                                please contact us immediately through the <a href="contact.html">
+                                    Contact Us
+                                </a> page with your order details and photos of the damage.</p>
                         </details>
                     </td>
                 </tr>
@@ -149,7 +151,8 @@
                             <summary><strong>Can I change or 
                                 cancel my order after placing it?</strong></summary>
                             <p>Order changes or cancellations can be made within 
-                                1 hour of placing the order. Please contact our customer support team as soon as possible.</p>
+                                1 hour of placing the order. 
+                                Please contact our customer support team as soon as possible.</p>
                         </details>
                     </td>
                 </tr>
