--- a/product4.html
+++ b/product4.html
@@ -53,7 +53,8 @@
     <main style="padding: 10px; background-color: #c1c5c6;">
         <section id="product4">
             <h2>Girls Poof Girl! Black Floral Size Small to Medium (7-8) Leggings NWOT</h2>
-            <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" style="width: 300px; height: 300px; margin-right: 20px;">
+            <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" 
+            style="width: 300px; height: 300px; margin-right: 20px;">
             <p>Price: Rs. 300</p>
             <button>Add to Cart</button>
             <br><br>
@@ -64,12 +65,14 @@
             <ul>
                 <li><u>QUALITY FABRIC:</u> 95% Polyester, 5% Spandex. 
                     The fabric is stretchy, super soft, and breathable.</li>
-                <li><u>Slaixiu 4-Pack Printing leggings for girls:</u> Colors are bright and vivid, even after washing.</li>
+                <li><u>Slaixiu 4-Pack Printing leggings for girls:</u> Colors are bright and vivid, 
+                    even after washing.</li>
                 <li><u>Life scene suitable for girls leggings:</u> Great for playing, exercising, 
                     daily wear, dance, yoga, and more.</li>
                 <li><u>RECOMMENDED SIZE:</u> Available in ages 4-12, with sizes 4-5T, 
                     6-7 Years, 8-9 Years, 10-11 Years, and 12-13 Years.</li>
-                <li><u>100% SATISFACTION GUARANTEE:</u> Purchase and quality covered, with a full refund option.</li>
+                <li><u>100% SATISFACTION GUARANTEE:</u> Purchase and quality covered, 
+                    with a full refund option.</li>
             </ul>
             <h3>Specifications</h3>
             <table border="1" cellpadding="10" cellspacing="0">
